<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/navigation_home"
        android:icon="@mipmap/home_icon"
        android:title="@string/title_home"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/navigation_notifications"
        android:icon="@mipmap/notification"
        android:title="@string/title_notifications"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/navigation_bash"
        android:icon="@mipmap/bash_icon"
        android:title="@string/title_bash"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/navigation_search"
        android:icon="@mipmap/search_icon"
        android:title="@string/title_search"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/navigation_profile"
        android:icon="@mipmap/account_icon"
        android:title="@string/title_profile"
        app:showAsAction="ifRoom"/>
</menu>
