<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center">
    <LinearLayout
        android:layout_width="@dimen/dp300"
        android:layout_height="400dp"
        android:background="@drawable/white_bg"
        android:elevation="@dimen/dp4"
        android:gravity="center">
        <LinearLayout
            android:layout_width="200dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center">
            <com.openup.widgets.OpenUpTextview
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                style="@style/textviewbold"
                android:text="@string/status"
                android:textSize="@dimen/sp18"/>
            <com.openup.widgets.OpenUpTextview
                android:id="@+id/status_single"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/single"
                android:background="@drawable/gray_border_round"
                android:textColor="@color/dark_gray"
                style="@style/textviewbold"
                android:padding="@dimen/dp6"
                android:layout_marginTop="@dimen/dp56"
                android:gravity="center"/>
            <com.openup.widgets.OpenUpTextview
                android:id="@+id/status_taken"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/taken"
                android:background="@drawable/gray_border_round"
                android:textColor="@color/dark_gray"
                style="@style/textviewbold"
                android:padding="@dimen/dp6"
                android:layout_marginTop="@dimen/dp32"
                android:gravity="center"/>
            <com.openup.widgets.OpenUpTextview
                android:id="@+id/next_user_status"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/next"
                android:background="@drawable/blue_full_round_bg"
                android:textColor="@color/white"
                style="@style/textviewbold"
                android:padding="@dimen/dp6"
                android:layout_marginTop="@dimen/dp56"
                android:gravity="center"/>
        </LinearLayout>

    </LinearLayout>
</LinearLayout>
