<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center">
    <RelativeLayout
        android:layout_width="@dimen/dp300"
        android:layout_height="400dp"
        android:elevation="@dimen/dp4"
        android:gravity="bottom">
        <ImageView
            android:background="@drawable/white_bg"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@mipmap/party_2"
            android:scaleType="centerCrop"/>
        <!--<LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/black"
            android:alpha="0.4"/>-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="bottom|center_horizontal"
            android:layout_marginBottom="@dimen/dp24">
            <com.openup.widgets.OpenUpTextview
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bash_title"
                android:textColor="@color/white"
                android:textSize="@dimen/sp18"
                style="@style/textviewbold"/>
            <com.openup.widgets.OpenUpTextview
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bash_date"
                android:textColor="@color/white"
                style="@style/textviewregular"/>
            <com.openup.widgets.OpenUpTextview
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bash_time"
                android:textColor="@color/white"
                style="@style/textviewregular"/>
            <com.openup.widgets.OpenUpTextview
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/interested"
                android:textColor="@color/white"
                style="@style/textviewregular"
                android:padding="@dimen/dp4"
                android:paddingStart="@dimen/dp24"
                android:paddingEnd="@dimen/dp24"
                android:background="@drawable/blue_full_round_bg"
                android:layout_marginTop="@dimen/dp8"/>
        </LinearLayout>

    </RelativeLayout>
</LinearLayout>
