<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white_smoke">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorPrimaryDark"
            android:theme="@style/ThemeToolbar"
            android:elevation="@dimen/dp4"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            app:title="@string/details"
            app:titleTextColor="@color/white">
            <ImageView
                android:id="@+id/setting_layout"
                android:layout_width="@dimen/dp25"
                android:layout_height="@dimen/dp25"
                android:padding="@dimen/dp5"
                android:src="@mipmap/option_icon"
                android:layout_marginEnd="@dimen/dp10"
                android:layout_gravity="end"
                android:tint="@color/white"
                />
        </android.support.v7.widget.Toolbar>
        <RelativeLayout
            android:id="@+id/profile_wrraper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/party_timeline_image"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp200"
                android:src="@mipmap/party_2"
                android:scaleType="centerCrop"/>
            <com.mikhaellopez.circularimageview.CircularImageView
                android:layout_width="@dimen/dp40"
                android:layout_height="@dimen/dp40"
                android:src="@mipmap/default_usr_img"
                app:civ_border_color="@color/colorPrimary"
                app:civ_border_width="@dimen/dp1"
                app:civ_shadow="false"
                app:civ_shadow_color="@color/bb_darkBackgroundColor"
                android:layout_alignEnd="@+id/party_timeline_image"
                android:layout_alignTop="@+id/party_timeline_image"
                android:layout_marginEnd="@dimen/dp24"
                android:layout_marginTop="@dimen/dp16"/>

            <com.openup.widgets.OpenUpTextview
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/interested"
                android:textColor="@color/white"
                style="@style/textviewregular"
                android:padding="@dimen/dp4"
                android:paddingStart="@dimen/dp24"
                android:paddingEnd="@dimen/dp24"
                android:layout_alignStart="@+id/party_timeline_image"
                android:layout_alignBottom="@+id/party_timeline_image"
                android:layout_marginStart="@dimen/dp24"
                android:layout_marginBottom="@dimen/dp16"
                android:background="@drawable/blue_full_round_bg"/>
        </RelativeLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:weightSum="10"
            android:background="@color/white"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/dp8"
            android:paddingStart="@dimen/dp16"
            android:paddingTop="@dimen/dp8"
            android:paddingBottom="@dimen/dp8"
            android:paddingEnd="@dimen/dp8"
            android:gravity="center_vertical">
            <LinearLayout
                android:layout_width="@dimen/dp0"
                android:layout_height="wrap_content"
                android:layout_weight="3.4"
                android:orientation="vertical"
                android:layout_marginEnd="@dimen/dp4">
                <com.openup.widgets.OpenUpTextview
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/bash_title"
                    android:textColor="@color/black"
                    style="@style/textviewbold"/>
                <com.openup.widgets.OpenUpTextview
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/bash_date"
                    android:textColor="@color/dark_gray"
                    style="@style/textviewregular"/>
                <com.openup.widgets.OpenUpTextview
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/bash_time"
                    android:textColor="@color/dark_gray"
                    style="@style/textviewregular"/>
            </LinearLayout>
            <ImageView
                android:layout_width="@dimen/dp0"
                android:layout_height="match_parent"
                android:layout_weight="2.2"
                android:src="@mipmap/party_1"
                android:layout_marginEnd="@dimen/dp4"
                android:scaleType="centerCrop"/>
            <ImageView
                android:layout_width="@dimen/dp0"
                android:layout_height="match_parent"
                android:layout_weight="2.2"
                android:src="@mipmap/party_2"
                android:layout_marginEnd="@dimen/dp4"
                android:scaleType="centerCrop"/>
            <ImageView
                android:layout_width="@dimen/dp0"
                android:layout_height="match_parent"
                android:layout_weight="2.2"
                android:src="@mipmap/party_1"
                android:scaleType="centerCrop"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/dp8"
            android:padding="@dimen/dp16"
            android:gravity="center">
            <com.openup.widgets.OpenUpTextview
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bash_address"
                android:textColor="@color/dark_gray"
                style="@style/textviewbold"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/location_tag_icon"
                android:layout_marginStart="@dimen/dp6"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/host_attend_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp8"
            android:background="@color/white"
            android:orientation="vertical"
            android:padding="@dimen/dp16">
            <com.openup.widgets.OpenUpTextview
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/description"
                android:textColor="@color/black"
                style="@style/textviewregular"
                android:layout_marginEnd="@dimen/dp8"/>
            <com.openup.widgets.OpenUpTextview
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/description_txt"
                android:textColor="@color/dark_gray"
                style="@style/textviewregular"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp8"
            android:background="@color/white"
            android:orientation="vertical"
            android:padding="@dimen/dp16">

            <com.openup.widgets.OpenUpTextview
                style="@style/textviewregular"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginEnd="@dimen/dp8"
                android:text="@string/people_attending"
                android:textColor="@color/dark_gray" />
            <!--<android.support.v7.widget.RecyclerView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

            </android.support.v7.widget.RecyclerView>-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp16"
                android:orientation="horizontal">

                <include
                    layout="@layout/item_people_attending"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <include
                    layout="@layout/item_people_attending"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <include
                    layout="@layout/item_people_attending"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <include
                    layout="@layout/item_people_attending"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>
        </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp8"
        android:background="@color/white"
        android:orientation="horizontal"
        android:paddingStart="@dimen/dp16"
        android:paddingEnd="@dimen/dp16"
        android:paddingTop="@dimen/dp4"
        android:paddingBottom="@dimen/dp4"
        android:weightSum="1"
        android:gravity="center_vertical">
        <com.openup.widgets.OpenUpTextview
            android:layout_width="@dimen/dp0"
            android:layout_height="wrap_content"
            android:layout_weight="0.2"
            android:text="@string/hosted_by"
            android:textColor="@color/dark_gray"
            style="@style/textviewregular"
            android:gravity="start"/>

        <com.openup.widgets.OpenUpTextview
            android:layout_width="@dimen/dp0"
            android:layout_height="wrap_content"
            android:layout_weight="0.68"
            android:text="@string/user_name"
            android:textColor="@color/black"
            style="@style/textviewregular"
            android:gravity="end"
            android:layout_marginEnd="@dimen/dp16"/>
        <com.mikhaellopez.circularimageview.CircularImageView
            android:layout_width="@dimen/dp0"
            android:layout_weight="0.12"
            android:layout_height="@dimen/dp40"
            android:src="@mipmap/default_usr_img"
            app:civ_border_color="@color/colorPrimary"
            app:civ_border_width="@dimen/dp1"
            app:civ_shadow="false"
            app:civ_shadow_color="@color/bb_darkBackgroundColor" />
    </LinearLayout>
    </LinearLayout>
</ScrollView>