<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.openup.SingleProfileFragment"
    android:background="@color/white_smoke"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="1"
        android:layout_marginTop="@dimen/dp8"
        android:background="@color/white"
        android:orientation="horizontal"
        android:paddingTop="@dimen/dp16"
        android:paddingBottom="@dimen/dp16">
        <com.openup.widgets.OpenUpTextview
            android:layout_width="@dimen/dp0"
            android:layout_height="wrap_content"
            android:layout_weight="0.4"
            android:text="@string/about_me"
            android:textSize="@dimen/sp18"
            android:textColor="@color/black"
            style="@style/textviewregular"
            android:gravity="start"
            android:layout_marginStart="@dimen/dp16"/>
        <EditText
            android:layout_width="@dimen/dp0"
            android:layout_height="wrap_content"
            android:layout_weight="0.6"
            android:hint="@string/about_me_hint"
            android:textSize="@dimen/sp18"
            android:textColor="@color/black"
            style="@style/textviewregular"
            android:gravity="start"
            android:background="@color/white"
            android:layout_marginEnd="@dimen/dp16"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="1"
        android:layout_marginTop="@dimen/dp8"
        android:background="@color/white"
        android:orientation="horizontal"
        android:paddingTop="@dimen/dp16"
        android:paddingBottom="@dimen/dp16">
        <com.openup.widgets.OpenUpTextview
            android:layout_width="@dimen/dp0"
            android:layout_height="wrap_content"
            android:layout_weight="0.4"
            android:text="@string/status"
            android:textSize="@dimen/sp18"
            android:textColor="@color/black"
            style="@style/textviewregular"
            android:gravity="start"
            android:layout_marginStart="@dimen/dp16"/>
        <com.openup.widgets.OpenUpTextview
            android:layout_width="@dimen/dp0"
            android:layout_height="wrap_content"
            android:layout_weight="0.6"
            android:text="Married"
            android:textSize="@dimen/sp18"
            android:textColor="@color/black"
            style="@style/textviewregular"
            android:layout_marginEnd="@dimen/dp16"
            android:gravity="start" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="1"
        android:layout_marginTop="@dimen/dp8"
        android:background="@color/white"
        android:orientation="horizontal"
        android:paddingTop="@dimen/dp16"
        android:paddingBottom="@dimen/dp16">
        <com.openup.widgets.OpenUpTextview
            android:layout_width="@dimen/dp0"
            android:layout_height="wrap_content"
            android:layout_weight="0.4"
            android:text="@string/dob"
            android:textSize="@dimen/sp18"
            android:textColor="@color/black"
            style="@style/textviewregular"
            android:gravity="start"
            android:layout_marginStart="@dimen/dp16"/>
        <com.openup.widgets.OpenUpTextview
            android:layout_width="@dimen/dp0"
            android:layout_height="wrap_content"
            android:layout_weight="0.6"
            android:text="24-06-1992"
            android:textSize="@dimen/sp18"
            android:textColor="@color/black"
            style="@style/textviewregular"
            android:layout_marginEnd="@dimen/dp16"
            android:gravity="start" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="1"
        android:layout_marginTop="@dimen/dp8"
        android:background="@color/white"
        android:orientation="horizontal"
        android:paddingTop="@dimen/dp16"
        android:paddingBottom="@dimen/dp16">
        <com.openup.widgets.OpenUpTextview
            android:layout_width="@dimen/dp0"
            android:layout_height="wrap_content"
            android:layout_weight="0.4"
            android:text="@string/address"
            android:textSize="@dimen/sp18"
            android:textColor="@color/black"
            style="@style/textviewregular"
            android:gravity="start"
            android:layout_marginStart="@dimen/dp16"/>
        <com.openup.widgets.OpenUpTextview
            android:layout_width="@dimen/dp0"
            android:layout_height="wrap_content"
            android:layout_weight="0.6"
            android:text="Scheme n0. 74,Vijay Nagar,Indore"
            android:textSize="@dimen/sp18"
            android:textColor="@color/black"
            style="@style/textviewregular"
            android:layout_marginEnd="@dimen/dp16"
            android:gravity="start" />
    </LinearLayout>
</LinearLayout>
